Update repo entry.

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   ],
   "name": "@jimkang/restify",
   "homepage": "http://restifyjs.com",
-  "description": "REST framework",
+  "description": "REST framework. A fork of 4.3.4.",
   "version": "4.3.4",
   "repository": {
     "type": "git",
-    "url": "git://github.com/restify/node-restify.git"
+    "url": "git://github.com/jimkang/node-restify.git"
   },
   "main": "lib/index.js",
   "directories": {
